# af-training

./: .gitignore  PROJECT_SUMMARY.txt  README.md  database.db  docker-compose.yml  job_response.json  job_response_final_v2.json  job_response_real.json  pyproject.toml  requirements.txt
api/: config.py  main.py  requirements.txt
api/models/: db.py
api/routers/: datasets.py  events.py  models.py  training.py
api/services/: event_manager.py  process_manager.py  training_strategies.py
deployment/common/configs/: config_infer_template.txt
deployment/common/labels/: industrial.txt  ppe.txt  traffic.txt
deployment/edge/configs/: config_infer_ppe.txt
deployment/edge/scripts/: build_engines.sh
deployment/x86/configs/: config_infer_ppe.txt
deployment/x86/scripts/: build_engines.sh
docker/: Dockerfile.edge  Dockerfile.train  Dockerfile.x86
docs/: CONVERSATION_ANALYSIS.md  DATASETS.md  DEPLOYMENT.md  IIOT_MODELS.md  INDEX.md  PYTHON_ENV_SUMMARY.md  QUICKSTART.md  SETUP.md  UI.md
tools/: benchmark.py  validate_deployment.py
training/configs/calibration/: auto_calib_my_model.yaml  ppe_calib.yaml
training/configs/datasets/: construction-safety.yaml  industrial.yaml  ppe.yaml  traffic.yaml  wildlife.yaml
training/scripts/: export_onnx.py  generate_calibration.py  prepare_dataset.py  train.py  train_anomaly.py  train_tabular.py  train_timeseries.py
ui/: package-lock.json  package.json
ui/app/: layout.tsx  page.tsx
ui/app/datasets/: page.tsx
ui/app/models/: page.tsx
ui/app/training/: page.tsx
ui/components/: app-sidebar.tsx  client-layout.tsx  log-viewer.tsx  sse-listener.tsx
ui/contexts/: job-context.tsx
ui/utils/: config.ts
